fixing spacing

--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ p {font-weight: 200; font-size: 20px;}
 
 h1 {
       font-size: 50px;
+      line-height: 1.0
     }
 .meta {text-transform: uppercase; font-family: Courier New, Quicksand, "Helvetica Neue", "Arial", sans-serif; font-size: 11px; letter-spacing: .15em;}
 .meta a:hover {border-bottom: 1px solid #CCFF26; color: #333;}
